# cmr_neo

./: .gitignore  README.md
battery_monitoring/: CMakeLists.txt  package.xml  setup.py
battery_monitoring/cfg/: emails.yaml  params.yaml
battery_monitoring/include/battery_monitoring/: battery_monitoring.h
battery_monitoring/launch/: battery_monitoring.launch
battery_monitoring/msg/: BatteryMonitoring.msg
battery_monitoring/scripts/: email_shutdown_node.py
battery_monitoring/src/: battery_monitoring.cpp
cmr_neo/: CMakeLists.txt  package.xml
cmr_neo_ultrasonic/: CMakeLists.txt  package.xml
cmr_neo_ultrasonic/include/cmr_neo_ultrasonic/: collision_dist.h  us_avoid_collision.h
cmr_neo_ultrasonic/launch/: us_collision.launch
cmr_neo_ultrasonic/src/: us_avoid_collision.cpp
velocity_smoother/: CMakeLists.txt  package.xml
velocity_smoother/cfg/: params.cfg
velocity_smoother/include/cob_base_velocity_smoother/: footprint.h  velocity_smoother.h  velocity_smoother.h.orig
velocity_smoother/launch/: velocity_smoother.launch
velocity_smoother/params/: velocity_params.yaml
velocity_smoother/src/: footprint.cpp
velocity_smoother/src/cob_base_velocity_smoother/: velocity_smoother.cpp  velocity_smoother.cpp.orig
