<?xml version="1.0"?>
<package format="2">
<name>cmr_neo_ultrasonic</name>
<version>0.1.0</version>
<description>Ultrasonic sensors at CMR</description>

<maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>
<license>BSD</license>
<author email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</author>

<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>std_srvs</depend>
<depend>sensor_msgs</depend>
<depend>geometry_msgs</depend>
<depend>cmr_msgs</depend>
</package>
